--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
           </label>
           <button type="submit">Search</button>
         </form>
-        <span class="loader" hidden></span>
+        <span class="loader"></span>
         <ul class="gallery"></ul>
       </div>
     </main>
